--- a/src/app/features/character/component/character/character.component.css
+++ b/src/app/features/character/component/character/character.component.css
@@ -69,7 +69,7 @@ table tr:first-child .content-right {
 }
 
 .left-align {
-  display: inline-flex;
+  display: inline-block;
   justify-content: start;
   align-items: center;
   text-align: left;
