--- a/src/app/shared/component/extra-data/extra-data.component.html
+++ b/src/app/shared/component/extra-data/extra-data.component.html
@@ -177,6 +177,7 @@
               [innerText]="dmgDatas[i][prop] | truncate"
               [matTooltip]="dmgDatas[i][prop] + ''"
               matTooltipPosition="right"
+              class="value"
             ></span>
           </td>
         </tr>
